Add : MC, Modbus, S7 프로토콜 시뮬레이터 아이콘 적용

--- a/ModbusProtocolSimulator/ModbusProtocolSimulator.csproj
+++ b/ModbusProtocolSimulator/ModbusProtocolSimulator.csproj
@@ -6,8 +6,12 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
-    <ApplicationIcon></ApplicationIcon>
+    <ApplicationIcon>Modbus.ico</ApplicationIcon>
     <StartupObject>ModbusProtocolSimulator.App</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Modbus.ico" />
+  </ItemGroup>
 
 </Project>
