--- a/McProtocolSimulator/McProtocolSimulator.csproj
+++ b/McProtocolSimulator/McProtocolSimulator.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>MC.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="MC.ico" />
+  </ItemGroup>
 
 </Project>
