--- a/S7ProtocolSimulator/S7ProtocolSimulator.csproj
+++ b/S7ProtocolSimulator/S7ProtocolSimulator.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>S7.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="S7.ico" />
+  </ItemGroup>
 
 </Project>
